--- a/website/localevents.html
+++ b/website/localevents.html
@@ -118,8 +118,8 @@
 
     <div class="row">
         <div class="col-sm-8 col-lg-offset-1">
-            <h3>Posters & Flyers</h3>
-            <div class="row">
+            <h3>Posters, Flyers & Handouts</h3>
+            < class="row">
                 <div class="col col-sm-3">
                     <p>
                         <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
@@ -136,8 +136,30 @@
                         <a href="Little Family Tree Flyer.pdf">Download the Flyer</a>
                     </p>
                 </div>
-				
-            </div>
+                <div class="col col-sm-3">
+                    <p>
+                        <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
+                    </p>
+                    <p>
+                        <a href="Little Family Tree Poster.pdf">Download the Quarter Page Ad</a>
+                    </p>
+                </div>
+                <div class="col col-sm-3">
+                    <p>
+                        <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
+                    </p>
+                    <p>
+                        <a href="Little Family Tree Poster.pdf">Download the Half Page Ad</a>
+                    </p>
+                </div>
+                <div class="col col-sm-3">
+                     <p>
+                         <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
+                    </p>
+                    <p>
+                        <a href="Little Family Tree Poster.pdf">Download the Handout</a>
+                    </p>
+                </div>
         </div>
         <div class="col-sm-3 text-center">
             <img class="guide-image" src="Rootstech_Booth.jpeg" />
