--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -121,17 +121,26 @@
                         Data from your online family tree is loaded in the background over WiFi while your
                         child plays.  As more data is loaded, more of your child's unique heritage is
                         available for them to engage with and learn about.
-                        
+                    </p>
+                    <p>
                         When the app is first loaded on a device, it does take some time for the data
                         to populate the games.  We recommend playing several rounds of one of the
                         photo games first, like scratch-off or watercolor to help the app download the
                         data faster. Your child can also expand the family tree to download data on
-                        earlier generations faster.
-
+                        earlier generations faster. Allow the app to run in the background after first
+                        installing so the data can continue to load.
+                    </p>
+                    <p>
                         The parameters for loading data in the background can be managed via the app
                         settings.
                     </p>
             <div class="row">
+                <div class="col-sm-4 text-center">
+                    <div class="game-video embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/B1GfTuT13K0?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <a href="Screenshot_matching.png"><img class="guide-image" src="Screenshot_matching.png" border="0"/></a>
+                </div>
                 <div class="col-sm-8 col-lg-offset-1">
                     <h3>Text and Sounds</h3>
             <p>
