--- a/website/song.html
+++ b/website/song.html
@@ -30,6 +30,10 @@
             width: 100%;
             max-width: 500px;
         }
+        .song-details {
+            font-size: 85%;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
@@ -98,32 +102,58 @@
     <div class="row">
         <div class="col-sm-6 col-lg-offset-1">
             <p>
-                This game chooses a random picture from your close relatives and cuts it up into a
-                simple puzzle to put back together.  Move the pieces around by touching and dragging
-                them to a new place on the screen.  When a piece is in the correct place it is no
-                longer movable.
+                To access the Sing-A-Long game, tap on the piano in the attic.  This game comes with
+                three songs. Each song in this game will help your child learn
+                different facts about their ancestors: names, dates and places, and relationships.
+                Select a song by tapping on one of the song icons below the stage.
+                <div class="row">
+                    <div class="col-sm-4 text-center">
+                        <img src="song1.png" style="margin-left: 15px;"/>
+                        <p>"We Are a Family"
+                        <br /><span class="song-details">Learn names</span></p>
+                    </div>
+                    <div class="col-sm-4 text-center"><br />
+                        <img src="song2.png" />
+                        <p>"Family History is My History"<br />
+                            <span class="song-details">Learn dates and places</span>
+                        </p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <img src="song3.png" />
+                        <p>"This Is My Family"<br />
+                            <span class="song-details">Learn relationships</span>
+                        </p></div>
+                </div>
             </p>
             <p>
-                A thumbnail of the completed picture is displayed on the bottom left corner of the
-                screen. Touching this thumbnail will show you what picture looks like with the
-                puzzle is completed.  It only remains up while you are touching the thumbnail.
+                Select four relatives to place on the stage from the list of relatives on the right.
+                Attributes from these four relatives will be featured in the song.  Press the play
+                button at the top of the stage to start the song.  Pause the song by tapping the
+                pause button.  The reset button will reset the song back to the beginning
+                and return the people from the stage.  When the song is finished the people will
+                exit the stage.
+                You will now have the option to choose another song and feature different relatives.
             </p>
             <p>
-                When all of the pieces are in the correct spot, the game will speak the name of the
-                person to whom the picture was attached in the tree and then it will choose a new
-                random picture.
+                Pressing play without enough people on stage will automatically fill any empty
+                places with relatives from the list.
+                When the list of available relatives gets too low, more people will automatically be
+                added. As with most of the games in Little Family Tree, this game starts with the
+                relatives closest to the player and expands back to earlier generations.
             </p>
             <p>
-                As you complete puzzles, the number of pieces will increase with each new puzzle.
-                This will continue as long as you wish to continue playing.  If you leave and come
-                back to the game, it will return to the beginning with only 4 pieces to place.
+                You may turn on or off different instruments in the song by tapping on the instruments
+                below the stage.
+            </p>
+            <p class="text-center">
+                <img src="Screenshot-song2.png" width="200" />
             </p>
         </div>
         <div class="col-sm-4 text-center">
             <div class="game-video embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/QxnTXDLJi24?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
-            <a href="Screenshot_puzzle.png"><img class="guide-image" src="Screenshot_puzzle.png" border="0"/></a>
+            <a href="Screenshot_puzzle.png"><img class="guide-image" src="Screenshot-song.png" border="0"/></a>
         </div>
     </div>
     <div class="row">
