--- a/website/index.html
+++ b/website/index.html
@@ -274,6 +274,8 @@
                     <li>
                         <a target="_blank" href="https://familysearch.org/apps/product/littlefamilytree/android">
                             <img class="fsicon small-margin" src="FS-Certified.png" border="0"/><br />
+                        </a>
+                        <a href="familysearch.html">
                             <h4>Learn more about our FamilySearch
                             integration.</h4>
                         </a>
