--- a/website/localevents.html
+++ b/website/localevents.html
@@ -119,7 +119,7 @@
     <div class="row">
         <div class="col-sm-8 col-lg-offset-1">
             <h3>Posters, Flyers & Handouts</h3>
-            < class="row">
+            <div class="row">
                 <div class="col col-sm-3">
                     <p>
                         <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
@@ -137,29 +137,33 @@
                     </p>
                 </div>
                 <div class="col col-sm-3">
-                    <p>
-                        <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
-                    </p>
-                    <p>
-                        <a href="Little Family Tree Poster.pdf">Download the Quarter Page Ad</a>
-                    </p>
+                <p>
+                    <a href="LFT Half Page Ad.JPG"><img class="guide-image" src="LFT Half Page Ad.JPG" /></a>
+                </p>
+                <p>
+                    <a href="LFT Half Page Ad.JPG">Download the Half Page Ad</a>
+                </p>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col col-sm-3">
                     <p>
-                        <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
+                        <a href="LFT Quarter Page Ad.JPG"><img class="guide-image" src="LFT Quarter Page Ad.JPG" /></a>
                     </p>
                     <p>
-                        <a href="Little Family Tree Poster.pdf">Download the Half Page Ad</a>
+                        <a href="LFT Quarter Page Ad.JPG">Download the Quarter Page Ad</a>
                     </p>
                 </div>
+
                 <div class="col col-sm-3">
                      <p>
-                         <a href="Little Family Tree Poster.pdf"><img class="guide-image" src="Event_Poster.png" /></a>
+                         <a href="LFT Handout.pdf"><img class="guide-image" src="LFTHandoutScreenshot.jpeg" /></a>
                     </p>
                     <p>
-                        <a href="Little Family Tree Poster.pdf">Download the Handout</a>
+                        <a href="LFT Handout.pdf">Download the Handout</a>
                     </p>
                 </div>
+            </div>
         </div>
         <div class="col-sm-3 text-center">
             <img class="guide-image" src="Rootstech_Booth.jpeg" />
@@ -246,21 +250,35 @@
                 </div>
                 <div class="col col-sm-3">
                     <p>
-                        <a href="Little Family Tree - FamilySearch Features.mp4"><img class="guide-image" src="FS-Certified.png" /></a>
+                        <a href="Sing-A-Long Game Tutorial.mov"><img class="guide-image" src="SingALongScreenshot.PNG" /></a>
                     </p>
                     <p>
-                        <a href="Little Family Tree - FamilySearch Features.mp4">FamilySearch Features</a>
+                        <a href="Sing-A-Long Game Tutorial.mov">Sing-A-Long Tutorial</a>
                     </p>
                 </div>
-				
             </div>
-        </div>
+            <div class="row">
+                    <div class="col col-sm-3">
+                        <p>
+                            <a href="Parents Guide.mov"><img class="guide-image" src="Parents Guide Screenshot.png" /></a>
+                        </p>
+                        <p>
+                            <a href="Parents Guide.mov">Parent's Guide</a>
+                        </p>
+                    </div>
+                    <div class="col col-sm-3">
+                        <p>
+                            <a href="Little Family Tree - FamilySearch Features.mp4"><img class="guide-image" src="FS-Certified.png" /></a>
+                        </p>
+                        <p>
+                            <a href="Little Family Tree - FamilySearch Features.mp4">FamilySearch Features</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
 		<div class="col-sm-3 text-center">
 			<img class="guide-image" src="PlayingLittleFamilyTree.jpeg" />
             <br/><br/>
-		</div>
-
-        <div class="col-sm-3 text-center">
 			<img class="guide-image" src="game_icons/parentsguide_background.png" />
         </div>
     </div>
@@ -273,56 +291,5 @@
 
 <!-- Plugin JavaScript -->
 <script src="jquery.easing.min.js"></script>
-
-<script>
-    function randomNumber(max) {
-        return Math.floor((Math.random() * max));
-    }
-
-    $(document).ready(function() {
-        // jQuery for page scrolling feature - requires jQuery Easing plugin
-        $('a.page-scroll').bind('click', function(event) {
-            var $anchor = $(this);
-            $('html, body').stop().animate({
-                scrollTop: ($($anchor.attr('href')).offset().top - 50)
-            }, 1250, 'easeInOutExpo');
-            event.preventDefault();
-        });
-
-        var x = 0;
-        $('.star').each(function() {
-            $(this).css('top', randomNumber(40));
-            $(this).css('left', x + randomNumber(25));
-            $(this).css('width', 10 + randomNumber(30));
-            $(this).data("growing", true);
-            $(this).data("x", $(this).position().left);
-            $(this).data("y", $(this).position().top);
-            x+=40;
-        });
-
-        window.setInterval(function() {
-            $('.star').each(function() {
-                var star = $(this);
-                var w = star.width();
-                if (star.data('growing')) {
-                    w++;
-                    if (w > 40) {
-                        w = 39;
-                        star.data('growing', false);
-                    }
-                } else {
-                    w--;
-                    if (w < 15) {
-                        w = 16;
-                        star.data('growing', true);
-                    }
-                }
-                star.css('width', w);
-                //star.css('left', Math.floor(star.data("x") - w/2));
-                //star.css('top', Math.floor(star.data("y") - w/2));
-            });
-        }, 50);
-    });
-</script>
 </body>
 </html>
