--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -132,14 +132,12 @@
                     <p>
                         When the app is first loaded on a device, it does take some time for the data
                         to populate the games.  We recommend playing several rounds of one of the
-                        photo games first, like scratch-off or watercolor to help the app download the
-                        data faster. Your child can also expand the family tree to download data on
-                        earlier generations faster. Allow the app to run in the background after first
-                        installing so the data can continue to load.
+                        photo games first, like scratch-off or watercolor to help the app place more
+                        ancestors in the queue for download. Allow the app to run in the background after
+                        first installing so the data can continue to load in the background.
                     </p>
                     <p>
-                        The parameters for loading data in the background can be managed via the app
-                        settings.
+                        The parameters for loading data can be managed via the app settings.
                     </p>
             </div>
                 <div class="col-sm-3 text-center">
@@ -218,8 +216,8 @@
                 pictures chosen and relationships spoken are relative to that person.
             </p>
             <p>
-                You may choose a different player at any time by using the back button or tapping
-                the player's profile picture on the activity screens.
+                You may choose a different player at any time by tapping the player's profile
+                picture on the activity screens.
             </p>
         </div>
         <div class="col-sm-3 text-center">
@@ -233,7 +231,7 @@
             <p>
                 The home is the hub of the game.  It is designed to be inviting and engaging for
                 your child. If something looks interesting, simply touch it to see what happens.
-                Most children find the touch interface inuitive and natural but you may need to help
+                Most children find the touch interface intuitive and natural but you may need to help
                 younger toddlers to get started.
             </p>
             <p>
