--- a/website/song.html
+++ b/website/song.html
@@ -151,7 +151,7 @@
         </div>
         <div class="col-sm-4 text-center">
             <div class="game-video embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/QxnTXDLJi24?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/Q5mlkNSlPcw?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
             <a href="Screenshot_puzzle.png"><img class="guide-image" src="Screenshot-song.png" border="0"/></a>
         </div>
