--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -272,11 +272,26 @@
                 screen.  You must enter the password for your online tree account in order to
                 access the settings.  This prevents children from accidentally changing the settings.
             </p>
+            <p>The adult login can now be remembered for 20 minutes at a time! When the device asks
+                for an adult login, simply slide the icon next to the "Remember for 20 minutes" option
+                so it is green before hitting the "sign in" button.</p>
             <p>
                 From the settings you can manage your connection to your online family tree and
                 change synchronization settings.  You can also choose to hide people from your
                 online tree so that they do not show up in Little Family Tree.  You can
                 return to this parent's guide at anytime from the settings screen.
+            </p>
+            <h3>Customizing Names</h3>
+            <p>You can now record the names of relatives and ancestors instead of having the device
+                voice say the names. You can also say special names like Grandma, Nana, Papa, and nicknames or middle
+                names that family members go by. Do this by going to Settings, then Manage People.
+                Search for the person who's name you want to record. Click their name when it appears
+                on the search results. Tap the microphone icon. A screen will appear with a play icon,
+                microphone icon and garbage icon. Tap the microphone icon and record the name
+                without delay. Tap the pause button right after you say the name. Push the play
+                button to listen to the recorded name. Record again as many times as you'd like to
+                get the name just right. Use the garbage icon to delete the recorded name and return
+                to the device voice at any time. Repeat the steps for any names you'd like to record.
             </p>
         </div>
         <div class="col-sm-3 text-center">
