--- a/website/index.html
+++ b/website/index.html
@@ -257,6 +257,14 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-3 col-sm-6 outer-game-box" id="rescue-box">
+                <a href="#" class="portfolio-box">
+                    <img src="game_icons/house_tree_bird.png" id="rescue" class="img-responsive" alt="">
+                    <div class="game-box">
+                        Relative Rescue
+                    </div>
+                </a>
+            </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="parentsguide-box">
                 <a href="parentsguide.html" class="portfolio-box">
                     <div class="game-box">
@@ -705,7 +713,24 @@
         id: 'birthday'
     };
 
-    var gameAnimations = [wardrobe, puzzle, watercolor, scratch, match, bubbles, treespy, song, birthday];
+    var rescue = {
+        images: [preload("game_icons/house_tree_bird.png"),
+            preload("game_icons/house_tree_bird3.png"),
+            preload("game_icons/house_tree_bird4.png"),
+            preload("game_icons/house_tree_bird5.png"),
+            preload("game_icons/house_tree_bird6.png"),
+            preload("game_icons/house_tree_bird7.png"),
+            preload("game_icons/house_tree_bird.png")
+        ],
+        selectedImage: 0,
+        direction: 1,
+        animating: false,
+        href: 'relativerescue.html',
+        noreverse: true,
+        id: 'rescue'
+    };
+
+    var gameAnimations = [wardrobe, puzzle, watercolor, scratch, match, bubbles, treespy, song, birthday, rescue];
     var gameObjs = {
         "dressup-box": wardrobe,
         "puzzle-box": puzzle,
@@ -715,7 +740,8 @@
         "bubbles-box": bubbles,
         "treespy-box": treespy,
         "song-box": song,
-        "birthday-box": birthday
+        "birthday-box": birthday,
+        "rescue-box": rescue
     };
 
     $(document).ready(function() {
@@ -745,6 +771,10 @@
                 gameObjs[id].animating = true;
                 if (!gameObjs[id].repeating)
                     gameObjs[id].direction = 1;
+                if (gameObjs[id].noreverse) {
+                    if (gameObjs[id].selectedImage==gameObjs[id].images.length-1)
+                        gameObjs[id].selectedImage = 0;
+                }
             }
         });
         $('.outer-game-box').on('mouseleave', function() {
@@ -754,7 +784,12 @@
                     gameObjs[id].animating = false;
                 } else {
                     gameObjs[id].animating = true;
-                    gameObjs[id].direction = -1;
+                    if (!gameObjs[id].noreverse) {
+                        gameObjs[id].direction = -1;
+                    } else {
+                        if (gameObjs[id].selectedImage==gameObjs[id].images.length-1)
+                            gameObjs[id].selectedImage = 0;
+                    }
                 }
             }
         });
@@ -772,7 +807,9 @@
                     animation.clicked = false;
                     if (animation.repeating) {
                         animation.selectedImage = animation.images.length-1;
-                        animation.direction = -1;
+                        if (!animation.noreverse) {
+                            animation.direction = -1;
+                        }
                     } else {
                         animation.selectedImage = animation.images.length-1;
                         animation.animating = false;
