Website updates for freemium model

--- a/website/index.html
+++ b/website/index.html
@@ -192,6 +192,7 @@
                         Heritage Dress Up
                     </div>
                 </a>
+                <img class="box-star" src="redstar1.png" alt="Premium Activity" title="Premium Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="puzzle-box">
                 <a href="#" class="portfolio-box">
@@ -200,6 +201,7 @@
                         Picture Puzzle
                     </div>
                 </a>
+                <img class="box-star" src="star1.png" alt="Free Activity" title="Free Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="watercolor-box">
                 <a href="#" class="portfolio-box">
@@ -208,6 +210,7 @@
                         Water Coloring
                     </div>
                 </a>
+                <img class="box-star" src="redstar1.png" alt="Premium Activity" title="Premium Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="match-box">
                 <a href="#" class="portfolio-box">
@@ -216,6 +219,7 @@
                         Picture Matching
                     </div>
                 </a>
+                <img class="box-star" src="star1.png" alt="Free Activity" title="Free Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="scratch-box">
                 <a href="#" class="portfolio-box">
@@ -224,6 +228,7 @@
                         Scratch Off
                     </div>
                 </a>
+                <img class="box-star" src="star1.png" alt="Free Activity" title="Free Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="bubbles-box">
                 <a href="#" class="portfolio-box">
@@ -232,6 +237,7 @@
                         Relationship Bubbles
                     </div>
                 </a>
+                <img class="box-star" src="star1.png" alt="Free Activity" title="Free Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="treespy-box">
                 <a href="#" class="portfolio-box">
@@ -240,6 +246,7 @@
                         Tree, I Spy
                     </div>
                 </a>
+                <img class="box-star" src="star1.png" alt="Free Activity" title="Free Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="song-box">
                 <a href="#" class="portfolio-box">
@@ -248,6 +255,7 @@
                         Sing-A-Long
                     </div>
                 </a>
+                <img class="box-star" src="redstar1.png" alt="Premium Activity" title="Premium Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="birthday-box">
                 <a href="#" class="portfolio-box">
@@ -256,6 +264,7 @@
                         Birthday Card
                     </div>
                 </a>
+                <img class="box-star" src="redstar1.png" alt="Premium Activity" title="Premium Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="rescue-box">
                 <a href="#" class="portfolio-box">
@@ -264,6 +273,7 @@
                         Relative Rescue
                     </div>
                 </a>
+                <img class="box-star" src="redstar1.png" alt="Premium Activity" title="Premium Activity">
             </div>
             <div class="col-md-3 col-sm-6 outer-game-box" id="parentsguide-box">
                 <a href="parentsguide.html" class="portfolio-box">
@@ -793,6 +803,8 @@
                 }
             }
         });
+
+        $('.box-star').tooltip({container: 'body'});
     });
 
     window.setInterval(function() {
