preparing for release

--- a/website/relativerescue.html
+++ b/website/relativerescue.html
@@ -102,29 +102,33 @@
                 fast-paced game.  When the game starts you will see the happy bird standing in a tree
                 surrounded by your relatives on leaves of the tree. Then a grumpy cloud comes along
                 and blows the leaves off of the tree.  You may skip this animation sequence and jump
-                right into the game by tapping the arrow button in bottom right of the screen
+                right into the game by tapping the arrow button in the bottom right of the screen.
             </p>
             <p>
                 Your role in the game is to rescue your relatives by guiding the flying bird to collect
-                the leaves of your relatives. You may move the bird around screen by tilting your device
+                the leaves of your relatives. You may move the bird around the screen by tilting your device
                 in the direction you would like the bird to fly.
                 When a leaf is collected the game will say the name of
                 the relative who was rescued and put them in your rescued collection. If a leaf
                 falls all of the way to the bottom of the screen without being collected by the bird
                 the leaf will turn red and be put in the missed collection.  The game ends when you
-                miss 3 leaves.
+                miss three leaves.
             </p>
             <p>
                 Sometimes the grumpy cloud will appear on the side of the screen and blow
-                your bird toward the other edge of the screen.  As you collect more leaves, the
-                faster new leaves will begin to fall, making them harder to catch.
+                your bird toward the other edge of the screen.  Tilt the device toward the grumpy cloud
+                to compensate for the wind.  As you collect more leaves, the
+                new leaves will begin to fall faster making them harder to catch.
+            </p>
+            <p class="text-center">
+                <a href="Screenshot-bird1.png"><img class="guide-image" src="Screenshot-bird1.png" border="0"  style="max-width: 310px;"/></a>
             </p>
         </div>
         <div class="col-sm-4 text-center">
             <div class="game-video embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/6YdVmS1Q2NE?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
-            <a href="Screenshot_tree.png"><img class="guide-image" src="Screenshot_tree.png" border="0"/></a>
+            <a href="Screenshot-bird2.png"><img class="guide-image" src="Screenshot-bird2.png" border="0"/></a>
         </div>
     </div>
     <div class="row">
