--- a/website/relativerescue.html
+++ b/website/relativerescue.html
@@ -126,7 +126,7 @@
         </div>
         <div class="col-sm-4 text-center">
             <div class="game-video embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/6YdVmS1Q2NE?rel=0" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" width="380" height="285" src="https://www.youtube.com/embed/_Ta5CwANvDI?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
             <a href="Screenshot-bird2.png"><img class="guide-image" src="Screenshot-bird2.png" border="0"/></a>
         </div>
