minor website updates

--- a/website/index.html
+++ b/website/index.html
@@ -95,6 +95,7 @@
                         <h3>
                             A mobile app that turns your online family tree into interactive games to teach your young child about their family history.
                         </h3>
+                        <h3>Download it for free today!</h3>
                     </div>
                     <p>
                         <a class="small-margin" href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1">
@@ -120,8 +121,8 @@
 					<img src="little_family_tree.png" class="logo-text-img" />
                     <h2 class="subtitle">
                         A mobile app that turns your online family tree into interactive games to teach your young child about their family history.
-
                     </h2>
+                    <h2>Download it for free today!</h2>
                 </div>
             </div>
 
