show skin color

--- a/website/index.html
+++ b/website/index.html
@@ -168,7 +168,10 @@
 				<div class="small-show">
 					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 				</div>
-                <div class="embed-responsive embed-responsive-16by9">
+                <div class="col-sm-5 embed-responsive embed-responsive-16by9" style="margin-right: 20px;">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jyo5eb72Eis?rel=0" allowfullscreen></iframe>  
+				</div>
+				<div class="col-sm-5 embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Yw2JffwCJKY?rel=0" allowfullscreen></iframe>  
 				</div>
             </div>
