--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -62,21 +62,13 @@
             <ul class="nav navbar-nav navbar-left">
 
                 <li>
-                    <a class="page-scroll" href="index.html">Home</a>
+                    <a class="page-scroll" href="index.html#page-top">Home</a>
                 </li>
-                <!--
                 <li>
-                    <a class="page-scroll" href="index.html#video">Video</a>
-                </li>
-                -->
-                <li>
-                    <a class="page-scroll selected" href="parentsguide.html">Parent's Guide</a>
+                    <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#games">Games</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="familysearch.html">FamilySearch</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
@@ -84,8 +76,8 @@
                 <li>
                     <a class="page-scroll" href="localevents.html">Event Resources</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="news.html">News</a>
+				<li>
+                    <a class="page-scroll" target="_blank" href="https://yellowfork.threadless.com/collections/little-family-tree/">Logo Shirts & More</a>
                 </li>
             </ul>
         </div>
@@ -143,6 +135,10 @@
                         The parameters for loading data can be managed via the app settings. The app is
                         read-only and does not change the data on the online tree.
                     </p>
+					<a href="familysearch.html">
+						<h5>Learn more about our FamilySearch integration.</h5>
+                    </a>
+                    <p>&nbsp;</p>
             </div>
                 <div class="col-sm-3 text-center">
                     <a href="Screenshot_matching.png"><img class="guide-image" src="Screenshot_matching.png" border="0"/></a>
