--- a/website/song.html
+++ b/website/song.html
@@ -62,21 +62,13 @@
             <ul class="nav navbar-nav navbar-left">
 
                 <li>
-                    <a class="page-scroll" href="index.html">Home</a>
+                    <a class="page-scroll" href="index.html#page-top">Home</a>
                 </li>
-                <!--
-                <li>
-                    <a class="page-scroll" href="index.html#video">Video</a>
-                </li>
-                -->
                 <li>
                     <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
                 <li>
-                    <a class="page-scroll selected" href="index.html#games">Games</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="index.html#partners">Partners</a>
+                    <a class="page-scroll" href="index.html#games">Games</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
@@ -84,8 +76,8 @@
                 <li>
                     <a class="page-scroll" href="localevents.html">Event Resources</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="news.html">News</a>
+				<li>
+                    <a class="page-scroll" target="_blank" href="https://yellowfork.threadless.com/collections/little-family-tree/">Logo Shirts & More</a>
                 </li>
             </ul>
         </div>
