--- a/website/birthdaycard.html
+++ b/website/birthdaycard.html
@@ -60,23 +60,14 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
-
-                <li>
-                    <a class="page-scroll" href="index.html">Home</a>
+				<li>
+                    <a class="page-scroll" href="index.html#page-top">Home</a>
                 </li>
-                <!--
-                <li>
-                    <a class="page-scroll" href="index.html#video">Video</a>
-                </li>
-                -->
                 <li>
                     <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
                 <li>
-                    <a class="page-scroll selected" href="index.html#games">Games</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="index.html#partners">Partners</a>
+                    <a class="page-scroll" href="index.html#games">Games</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
@@ -84,8 +75,8 @@
                 <li>
                     <a class="page-scroll" href="localevents.html">Event Resources</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="news.html">News</a>
+				<li>
+                    <a class="page-scroll" target="_blank" href="https://yellowfork.threadless.com/collections/little-family-tree/">Logo Shirts & More</a>
                 </li>
             </ul>
         </div>
